# TokoffChain

./: .env.example  .gitignore  .ruff.toml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-deb.yml  tests.yml
app/: __main__.py  settings.py
app/api/: __init__.py
app/api/routes/: __init__.py  transactions.py
app/api/schemes/: __init__.py  response.py  transaction.py
app/core/cryptography/: exceptions.py  signature.py
app/core/database/: database.py
app/core/database/models/: __init__.py  model.py  transaction.py  wallet.py
app/core/database/models/mixins/: __init__.py  created_at.py  updated_at.py
app/core/encryption/: exceptions.py  signature.py
app/crud/: __init__.py  transaction.py
docker/postgres/: Dockerfile  postgresql.conf
docker/postgres/docker-entrypoint-initdb.d/: init.sql
tests/core/cryptography/: test_signature.py
tests/core/encryption/: test_signature.py
